# statistical-stock-market-test

./: .gitignore  CI.py  LICENSE  README.md  build_fcf_dataset.py  build_fcf_dataset_2025_data.py  build_fcf_dataset_simfin.py  build_stocks_dataset_2025_data.py  build_stocks_dataset_simfin.py  corr.py  fcf_dataset.csv  fcf_quarterly_merged.csv  plot_results.txt  pyproject.toml  requirements.txt
confidence_interval/: README.md  ci.py
linear_regression/: codemaya.py  lr_by_market_cap.py  lr_by_market_cap_2_years.py  lr_by_market_cap_OLD.py  lr_by_market_cap_robust.py  ols_tech_sector.py  reject_null_hypothesis.py  run_ols_fcf.py  stock_predictions.py
scripts/: ticker.py
written/: custom.bib  stats_paper.fdb_latexmk  stats_paper.tex
