[project]
name = "fcf-to-prices-relation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "simfin>=1.0.1",
    "statsmodels>=0.14.4",
    "yahooquery>=2.4.1",
    "yfinance>=0.2.63",
]
